--- a/.env
+++ b/.env
@@ -4,8 +4,10 @@ JWTSECRET="23347$040412"
 PORT=8080
 READTIMEOUT=60s
 WRITETIMEOUT=60s
-USERNAME="docker_user"
-PASSWORD="docker_user_pwd"
-DBHOST="db"
-DATABASE="docker_db"
+DBUSER=docker_user
+DBPASSWORD=docker_user_pwd
+DBHOST=db
+DBPORT=5432
+DBTYPE=postgres
+DBNAME=blog
 TABLE_PREFIX="blog_"
